add_executable(signaldemo signaldemo.cc)
add_executable(killdemo killdemo.cc)
add_executable(sigsetdemo sigsetdemo.cc)
add_executable(alarmdemo alarmdemo.cc)
add_executable(func func.cc)
add_executable(signalactiondemo signalactiondemo.cc)
add_executable(sigqueuedemo_send sigqueuedemo_send.cc)
add_executable(sigqueuedemo_recv sigqueuedemo_recv.cc)
add_executable(timerdemo timerdemo.cc)

